--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@ footer p {
                 </h1>
             </div>
             <ul>
-                <li><a href="{{ url_for('login') }}">Login</a></li>
-                <li><a href="{{ url_for('register') }}" class="cta">Register</a></li>
+                <li><a href="/">Login</a></li>
+                <li><a href="/" class="cta">Register</a></li>
             </ul>
         </nav>
     </header>
@@ -152,7 +152,8 @@ footer p {
             <div class="hero-content">
                 <h2>Stay organized with <a href="/" class="logo">Tas<span>q</span></a>                </h2>
                 <p>Manage your tasks, notes, and reminders in one place. Join Tasq now and boost your productivity.</p>
-                <a href="{{ url_for('register') }}" class="cta">Get Started</a>
+                <a href="/" class="cta">Get Started</a>
+                <p>Tasq is currently under development and will be released soon.</p>
             </div>
         </section>
     </main>
